# tello-ros-revenant

./: .gitignore  CameraTrajectory.txt  LICENSE
data/: KeyFrameTrajectory.txt
install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/cpp_pubsub/lib/cpp_pubsub/: listener  talker
install/cpp_pubsub/share/cpp_pubsub/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/cv_ros_bridge_cpp/lib/cv_ros_bridge_cpp/: cv_ros_bridge_cpp
install/cv_ros_bridge_cpp/share/cv_ros_bridge_cpp/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/cv_ros_bridge_python/lib/cv_ros_bridge_python/: opencv_bridge
install/cv_ros_bridge_python/share/cv_ros_bridge_python/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/micro_ros_agent/lib/: libmicroxrcedds_agent.so.2.4.3
install/micro_ros_agent/lib/micro_ros_agent/: micro_ros_agent
install/micro_ros_agent/share/micro_ros_agent/: package.sh
install/micro_ros_msgs/share/micro_ros_msgs/: local_setup.sh  package.sh
install/micro_ros_setup/lib/micro_ros_setup/: build_agent.sh  build_firmware.sh  clean_env.sh  component  configure_firmware.sh  create_agent_ws.sh  create_firmware_ws.sh  create_ws.sh  flash_firmware.sh  yaml_filter.py
install/micro_ros_setup/share/micro_ros_setup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build
ros-ws/src/tello/: CMakeLists.txt  package.xml  setup.py
ros-ws/src/tello/launch/: run.launch.py
ros-ws/src/tello_competition/: package.xml  setup.cfg
ros-ws/src/tello_gui/: CMakeLists.txt  package.xml
ros-ws/src/tello_msg/: package.xml
src/cpp_pubsub/: CMakeLists.txt
src/cpp_pubsub/src/: pub_template.cpp  sub_template.cpp
src/cv_ros_bridge_cpp/: CMakeLists.txt
src/cv_ros_bridge_cpp/src/: cv_gazebo_bridge.cpp  cv_ros_bridge.cpp  cv_ros_bridge_talker.cpp
src/cv_ros_bridge_python/: package.xml  realsense2_camera_node  setup.cfg  setup.py
src/cv_ros_bridge_python/cv_ros_bridge_python/: cv_ros_bridge.py  cv_ros_bridge_image.py  cv_ros_bridge_listener.py  cv_ros_bridge_talker.py  edge_detection.py  image_dilation.py  image_erotion.py  image_publisher.py  image_splitter.py  image_threshold.py  line_detection.py  rs_d435_pointcloud_launch.py  sobel_derivative.py
src/cv_ros_bridge_python/launch/: cv_ros_bridge.launch.py  rs_launch.py
src/kinect2_ros2/kinect2_calibration/: CMakeLists.txt
src/state_machine/: CMakeLists.txt  package.xml
src/state_machine/src/: simple_state.cpp  yasmin_dji_tello.cpp
src/tello/: setup.py
src/tello/tello/: node.py
src/tello_competition/: setup.py
src/tello_competition/launch/: launch_tello.launch.py
src/tello_control/src/: main.cpp
uros_platformio/: platformio.ini
(+37 files in other folders)
